--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@prisma/client": "^6.19.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -51,6 +53,7 @@
     "jest": "^30.0.0",
     "lint-staged": "^16.2.6",
     "prettier": "^3.4.2",
+    "prisma": "^6.19.0",
     "shx": "^0.4.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
