--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,10 @@
       "src": "/(.*)",
       "dest": "dist/main.js"
     }
-  ]
+  ],
+  "functions": {
+    "dist/main.js": {
+      "includeFiles": "node_modules/.prisma/client/**"
+    }
+  }
 }
