--- a/package.json
+++ b/package.json
@@ -93,7 +93,8 @@
     "coveragePathIgnorePatterns": [
       "/node_modules/",
       "/dist/",
-      "/coverage/"
+      "/coverage/",
+      "/src/main.ts"
     ],
     "coverageDirectory": "coverage",
     "moduleDirectories": [
