feat(profile): add secure image upload and update user avatar

--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.18.0",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.1",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-express": "^11.1.9",
     "@nestjs/swagger": "^11.2.2",
     "@prisma/client": "^6.0.0",
     "bcrypt": "^6.0.0",
@@ -37,6 +38,7 @@
     "class-validator": "^0.14.2",
     "date-fns": "^4.1.0",
     "handlebars": "^4.7.8",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -51,8 +53,9 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@types/bcrypt": "^6.0.0",
-    "@types/express": "^5.0.0",
+    "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "commitizen": "^4.3.1",
